# NaI_scintillator_geant4

./: CMakeLists.txt  README.md
analysis/: analyzePeakValues.C  analyzePeakValuesAggregate.C  fitScintillationDecay.C
include/: action.hh  construction.hh  detector.hh  event.hh  generator.hh  physics.hh  run.hh
macros/: run_beamOn.mac  run_simulation.sh
output/: analyzePeakValues.C  plotArrivalTimes.C
src/: action.cc  construction.cc  detector.cc  event.cc  generator.cc  physics.cc  run.cc  sim.cc
